# csi-webserver-core-rs

./: .dockerignore  Cargo.toml  README.md
src/: csi.rs  lib.rs  models.rs  parquet_sink.rs  profile.rs  serial.rs  server.rs  state.rs  supervisor.rs
src/routes/: config.rs  control.rs  devices.rs  info.rs  mod.rs  ws.rs
